[package]
name = "hayagriva-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "hayagriva"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
hayagriva = { git = "https://github.com/typst/hayagriva", version = "0.9.1", features = ["csl-json", "archive"], default-features = false, branch = "main" }
serde_json = "1.0.146"

[dependencies.pyo3]
version = "0.27.2"
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
features = ["abi3-py310"]
